[package]
name = "evmtx_indexing"
version = "0.1.0"
license = "LGPL-3.0"
authors = ["0xAdil <adil0x@protonmail.com>"]
readme = "README.md"
description = "evmtx - indexing specs and tools for EVM chains"
repository = "https://github.com/pintnetwork/evmtx"
keywords = ["ethereum", "evm", "accounting", "crypto"]
edition = "2021"

[dependencies]
